[gd_scene load_steps=6 format=3 uid="uid://cstynndb7180p"]

[ext_resource type="Script" path="res://candle.gd" id="1_jij8f"]
[ext_resource type="Texture2D" uid="uid://d2qdbgn4dl6c4" path="res://point-light.png" id="2_utotc"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kf3ke"]
radius = 12.0
height = 48.0

[sub_resource type="SystemFont" id="SystemFont_colnr"]

[sub_resource type="Theme" id="Theme_ti16w"]
default_font = SubResource("SystemFont_colnr")
default_font_size = 32

[node name="candle" type="Sprite2D"]
script = ExtResource("1_jij8f")

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
offset_left = -157.0
offset_top = -115.0
offset_right = 181.0
offset_bottom = 94.0
mouse_filter = 2
color = Color(0.196078, 0.196078, 0.196078, 1)

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -7.0
offset_top = 1.0
offset_right = 8.0
offset_bottom = 41.0
mouse_filter = 2

[node name="OuterFlame" type="PointLight2D" parent="."]
position = Vector2(0, -8)
scale = Vector2(1.375, 1.375)
color = Color(0.811765, 0.803922, 0, 1)
texture = ExtResource("2_utotc")

[node name="InnerFlame" type="PointLight2D" parent="."]
position = Vector2(0, -8)
scale = Vector2(0.34375, 0.34375)
color = Color(0.627451, 0.305882, 0.333333, 1)
texture = ExtResource("2_utotc")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1, 21)
shape = SubResource("CapsuleShape2D_kf3ke")

[node name="Label" type="RichTextLabel" parent="."]
offset_left = -73.0
offset_top = -46.0
offset_right = 73.0
offset_bottom = 5.0
theme = SubResource("Theme_ti16w")
text = "Grab me!"

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
